vpc-lattice-config/files/lattice-pod-service-account.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: prodcatalog-ns-lattice
  labels:
    mesh: prodcatalog-mesh
    gateway: ingress-gw
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
