vpc-lattice-config/files/lattice-nlb.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-node-lb
  namespace: ${newns_name}
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 9000
      name: http
  selector:
    app: frontend-node
