vpc-lattice-config/files/canary.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proddetail2
  namespace: prodcatalog-ns-lattice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proddetail2
  template:
    metadata:
      labels:
        app: proddetail2
    spec:
      serviceAccountName: prodcatalog-lattice-sa
      containers:
        - name: proddetail
          image: "${ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/eks-app-mesh-to-vpc-lattice/catalog_detail:${APP_VERSION_2}"
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /ping
              port: 3000
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ping
              port: 3000
            successThreshold: 3
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: proddetail2
  namespace: prodcatalog-ns-lattice
  labels:
    app: proddetail2
spec:
  ports:
    - name: "http"
      port: 3000
      targetPort: 3000
  selector:
    app: proddetail2
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: proddetail-httproute
  namespace: prodcatalog-ns-lattice
spec:
  parentRefs:
    - name: product-catalog-lattice-gw
      sectionName: proddetail
  rules:
    - backendRefs:
        - name: proddetail
          namespace: prodcatalog-ns-lattice
          kind: Service
          port: 3000
          weight: 50
        - name: proddetail2
          namespace: prodcatalog-ns-lattice
          kind: Service
          port: 3000
          weight: 50
      matches:
      - path:
          type: PathPrefix
          value: /catalogDetail
---
