vpc-lattice-config/files/frontend-node-HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: frontend-node-httproute
  namespace: prodcatalog-ns-lattice
spec:
  parentRefs:
    - name: product-catalog-lattice-gw
      sectionName: frontend-node
  rules:
    - backendRefs:
        - name: frontend-node
          namespace: prodcatalog-ns-lattice
          kind: Service
          port: 9000
      matches:
      - path:
          type: PathPrefix
          value: /
