vpc-lattice-config/files/prodcatalog-HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: prodcatalog-httproute
  namespace: prodcatalog-ns-lattice
spec:
  parentRefs:
    - name: product-catalog-lattice-gw
      sectionName: prodcatalog
  rules:
    - backendRefs:
        - name: prodcatalog
          namespace: prodcatalog-ns-lattice
          kind: Service
          port: 5000
      matches:
      - path:
          type: PathPrefix
          value: /products
