vpc-lattice-config/files/proddetail-HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: proddetail-httproute
  namespace: prodcatalog-ns-lattice
spec:
  parentRefs:
    - name: product-catalog-lattice-gw
      sectionName: proddetail
  rules:
    - backendRefs:
        - name: proddetail
          namespace: prodcatalog-ns-lattice
          kind: Service
          port: 3000
          weight: 100
      matches:
      - path:
          type: PathPrefix
          value: /catalogDetail
